Improve fetch and validations

--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
                             id="message"
                         ></textarea>
                     </label>
-                    <button type="submit" class="btn">Enviar</button>
+                    <button type="submit" class="btn" id="btnSubmitContactForm">
+                        Enviar
+                    </button>
                 </form>
             </section>
         </main>
