--- a/order.html
+++ b/order.html
@@ -347,7 +347,9 @@
                     </details>
                     <br /><br /><br />
                     <div class="resumen" id="resumen"></div>
-                    <button type="submit" class="btn">Realizar compra</button>
+                    <button type="submit" class="btn" id="btnSubmitOrderForm">
+                        Realizar compra
+                    </button>
                 </form>
             </section>
         </main>
