--- a/reservations.html
+++ b/reservations.html
@@ -135,7 +135,13 @@
                             id="notesReservationForm"
                         ></textarea>
                     </label>
-                    <button type="submit" class="btn">Enviar</button>
+                    <button
+                        type="submit"
+                        class="btn"
+                        id="btnSubmitReservationsForm"
+                    >
+                        Enviar
+                    </button>
                 </form>
             </section>
         </main>
