--- a/menu.html
+++ b/menu.html
@@ -144,7 +144,7 @@
                 <a
                     class="btn"
                     href="./assets/pdf/MENU_NAPOLITANA.pdf"
-                    download="MENU_NAPOLITANA.pdf"
+                    target="_blank"
                     >Descargar menú</a
                 >
             </section>
