--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <main class="main">
             <section>
                 <h2>¡Empieza tu pedido!</h2>
-                <a href="pideenlinea.html" class="btn">Pide en línea</a>
+                <a href="./order.html" class="btn">Pide en línea</a>
             </section>
 
             <section>
